--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+
+# Build settings
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
