--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# theme: jekyll-theme-minimal
-
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
@@ -15,22 +13,23 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Gustavo Aguilar
+title: Gustavo Aguilar blog
 email: gaguilaralas@uh.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Natural Language Processing and Machine Learning
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://tavo91.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: tavoaguilar91
+github_username:  tavo91
 
 # Build settings
+permalink: default
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+
+resume: /assets/resume.pdf
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
