--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Gustavo's website
 author: Gustavo Aguilar
-email: gaguilaralas AT uh DOT edu
+email: gaguilaralas [at] uh [dot] edu
 description: >- # this means to ignore newlines until "baseurl:"
   Natural Language Processing and Machine Learning
 baseurl: "" # the subpath of your site, e.g. /blog
