fixing linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tavo91.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tavoaguilar91
 github_username:  gaguilar
+linkedin_username: gustavoag91
 google_analytics: UA-136188065-1
 
 
